OPENNLP-1833: clarify branch boundaries and finish review cleanup